Fixed style issue for hp bar on mobile

--- a/pokeapi_react_app/src/App.css
+++ b/pokeapi_react_app/src/App.css
@@ -1867,8 +1867,8 @@ const colours = {
 
 .battle-display-field-statusbar-back-hp-bar {
   position: absolute;
-  width: 78%;
-  left: 20%;
+  /* width: 78%;
+  left: 20%; */
   top: 15%;
   height: 70%;
   border-radius: 2px;
@@ -1881,11 +1881,20 @@ const colours = {
   );
 }
 
+.battle-display-field-statusbar-back-hp-bar-small {
+  left: 32%;
+  width: 66%;
+}
+
+.battle-display-field-statusbar-back-hp-bar-large {
+  left: 20%;
+  width: 78%;
+}
+
 .battle-display-field-statusbar-back-hp-number {
   position: absolute;
   width: 44%;
   left: 53%;
-  /* top: 80%; */
   bottom: 10%;
   font-size: 1.5rem;
   text-align: center;
